# tf-log-parser

./: .gitignore  Cargo.toml  README.md  flake.nix
.github/workflows/: release.yml  rust.yml
benches/: bench.rs  iai.rs
derive/: Cargo.toml
derive/examples/: expand.rs
derive/src/: event.rs  events.rs  lib.rs
examples/: all.rs  combine_handlers.rs  custom_handler.rs  dir.rs  events.rs  lobby_chat.rs
src/: common.rs  error.rs  lib.rs  main.rs  parsing.rs  raw_event.rs  subjectmap.rs
src/event/: game.rs  medic.rs  mod.rs  player.rs
src/module/: chat.rs  classstats.rs  healspread.rs  lobbysettings.rs  medicstats.rs  mod.rs
test_data/: log_2788889.json  log_2892242.json  log_6s.json  log_bball.json  log_hl.json
tests/: smoke.rs  snapshot.rs
tests/snapshots/: snapshot__parse-log_2788889.log.snap  snapshot__parse-log_6s.log.snap  snapshot__parse-log_bball.log.snap  snapshot__parse-log_hl.log.snap  snapshot__parse.snap
