[package]
name = "tf-log-parser"
version = "0.1.0"
authors = ["Robin Appelman <robin@icewind.nl>"]
edition = "2018"
license = "MIT OR Apache-2.0"
exclude = [ "test_data" ]
repository = "https://github.com/icewind1991/tf-log-parser"

[dependencies]
steamid-ng = "1"
enum-iterator = "1.4"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
main_error = "0.1"
paste = "1"
logos = "0.12"
memchr = "2.5.0"
ahash = "0.8.3"
tf-log-parser-derive = { version = "0.1", path = "./derive" }
miette = "5.5.0"
walkdir = "2.3.2"
once_cell = "1.17.1"

[dev-dependencies]
criterion = "0.4"
iai = "0.1"
miette = { version = "5.5.0", features = ["fancy"] }
insta = { version = "1.28.0", features = ["json"] }
test-case = "3.0.0"
rayon = "1.7.0"
indicatif = { version = "0.17.3", features = ["rayon"] }
flate2 = "1.0.25"

[[bench]]
name = "bench"
harness = false

[[bench]]
name = "iai"
harness = false

[profile.release]
lto = true
