[package]
name = "tf-log-parser-derive"
version = "0.1.0"
edition = "2021"

[lib]
name = "tf_log_parser_derive"
proc-macro = true

[dependencies]
syn = "2.0.12"
quote = "1.0.26"
proc-macro2 = "1.0.54"
structmeta = "0.2.0"
merge = "0.1.0"

[dev-dependencies]
tf-log-parser = { version = "0.1", path = ".." }